style.scss
/* ... */
// =======================================================================================
// how-it-works.html

#how-it-works {
  header {
      text-align: center;

      @include stripe {
        background-color: #2e2765;
      }
      
      p {
        padding-bottom: 0;
      }

      .containerize {
        display: flex;
        justify-content: space-between;
        height: 150px;
        
        .left {
          width: 460px;
        }
        .right {
          width: 100px;
        }
      }
    }
  }

  #intro {
    display: flex;
    flex-flow: row;
    padding: 30px;

    >ul {
      flex: 0 0 500px;
      border: 0 solid #aaa6b2;
      border-right-width: 1px;
      padding-right: 30px;
      margin: 0;

      ul>li { margin: 1em 0; }
    }

    ul {
      list-style: none;
    }

    >div {
      flex: 1 1 auto;
      padding-left: 30px;
      ul {
        list-style: disc;
      }
      >p:first-child { margin-top: 0; }
    }

    @media (max-width: 899px) {
      flex-flow: column;
      >ul {
        flex: 1 1 auto;
        border-right-width: 0;
        border-bottom-width: 1px;
        padding-right: 0;
        padding-bottom: 30px;
      }

      >div {
        padding-left: 0;
        padding-top: 20px;
      }
    }
  }

  #grains img {
    width: 50%;

    @media (max-width: 700px) {
      width: 100%;
    }
  }

  #different {
    padding: 35px 0;


    @include stripe {
    background-color: #eee9f4;
    }

    font-size: 30px;
    font-weight: 300;
    text-align: center;
  }

  #grains,#capabilities, {
    h2 {
      font-size: 35px;
      padding: 25px 0;
      margin: 0;
      @include stripe {
      background-color: #eee9f4;
      }
    }
    h3 {
      border-bottom: 1px solid #ddd;
      font-size: 35px;
      text-align: left;

      @media (max-width: 450px) {
        font-size: 20px;
      }
    }
  }

#grains .models {
  text-align: center;

  img {
    height: 250px;
    width: auto;
    max-width: 45%;    
  }
}

// =======================================================================================
// blog.html

#blog {
  header {
    @include stripe {
    background-image: -webkit-linear-gradient(top, #2e2765, #af7f9f);
    background-color: $header-bg;
    }
  }
  
  .sand {
    min-height: 180px;
    overflow: hidden;
    background-repeat: no-repeat;
    background-position: bottom center;
    background-image: url(images/header-blog.svg);
  }
}

  
// =======================================================================================
// about.html

body>#about {

  @include stripe {
    background-color: #2e2765;
    background-image: url(/images/header-about.svg);
    background-repeat: no-repeat;
    background-position: bottom;
  }
}

.story {
  width: 90%;
  p {
    padding: 0 0 40px 0;
  }
}

#team, #advisors, #sponsors {
    
  li h3 {
    border-bottom: 1px solid #ddd;
    margin: 7px 0 5px 0;
    text-align: left;
  }

  h4 {
    margin: 0;
  }

  p {
    font-size: 15px;
    float: left;
  }

  h5 {
    display: block;
    
    font-weight: lighter;
  }
  >ul {
    width: 100%;
    padding: 0px;
    margin: 0px;
    display: flex;
    flex-flow: row;
    flex-wrap: wrap;
    float: center;
    justify-content: space-around;
      
    >li {
      display: inline-block;
      width: 47%;
      position: relative;
      padding: 40px 0 0 0;
      
      @media (max-width: 800px) {
        width: 90%;
      }

      &::before {
        display: block;
        content: " ";
        float: left;
        background-repeat: no-repeat;
        height: 80px;
        width: 100px;
        background: bottom/contain no-repeat;
        background-position: left;
        background-color: #fff;
      }

      &.kenton::before { background-image: url("images/people/kenton.png"); }
      &.jade::before { background-image: url("images/people/jade.png"); }
      &.jason::before { background-image: url("images/people/jason.png"); }
      &.david::before { background-image: url("images/people/david.png"); }
      &.asheesh::before { background-image: url("images/people/asheesh.png"); }
      &.nena::before { background-image: url("images/people/nena.png"); }
      &.drew::before { background-image: url("images/people/drew.png"); }
      &.garply::before { background-image: url("images/people/garply.png"); }
      &.swetland::before { background-image: url("images/people/swetland.png"); }
      &.lutomirski::before { background-image: url("images/people/luto.png"); }
      &.nagra::before { background-image: url("images/people/jasvir.png"); }
      &.seaborn::before { background-image: url("images/people/seaborn.png"); }
      &.miller::before { background-image: url("images/people/miller.png"); }
      &.wagner::before { background-image: url("images/people/wagner.png"); }
      &.tang::before { background-image: url("images/people/audrey.png"); }
    }
  }
}

#contributors {
    
  @include stripe {
    background-color: $header-bg;
  }

  ul { 
    text-align: justify;
    text-align-last: center;
    line-height: 32px;
    padding: 20px 0 100px 0;

    li {
      display: inline-block;
      margin: 0 10px;
      text-align: center;
      color: $lightpurple-text;
    }
  }
}

#corporate {
  ul {
    width: 100%;
    padding: 0px;
    margin: 0px;
    display: flex;
    flex-flow: row;
    flex-wrap: wrap;
    float: center;
  }

  li {
    display: inline-block;
    width: 33%;
    padding: 15px 15px;
    position: relative;
    
    &::before {
    content: " ";
    display: block;
    background-repeat: no-repeat;
    height: 200px;
    background: center/contain no-repeat;
    }
    &.drawio::before { background-image: url("thirdparty/draw.io-logo.svg"); }
    &.humanweb::before { background-image: url("thirdparty/humanweb.png"); }
    &.uniregistry::before { background-image: url("thirdparty/uniregistry.svg"); }
    }
}
/* ... */

